samples/_failures_safe/1761544858_537bb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd5b25e7.c: In function ‘main’:
./samples/SAFE/__tmp_bd5b25e7.c:153:5: error: expected declaration or statement at end of input
  153 |     }
      |     ^
